-
Bug
-
Resolution: Fixed
-
P2: Important
-
Qt Creator 13.0.2, Qt Creator 14.0.0-rc1
-
-
8758c3c8d (14.0)
Steps to reproduce:
- Open any document
- Click the button immediately to the left of the document name (the one containing the save/close actions)
- While the context menu is open, press the keyboard combo for closing a document (Ctrl+W by default)
- Notice that the context menu is still open and its options are active; click on Save "filename" As...
- The application will crash
Found while bug testing rc1, but can be reproduced on the current stable version as well.
For Gerrit Dashboard: QTCREATORBUG-31232 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
576299,3 | Editors: Fix crash after triggering dropdown menu after closing editor | 14.0 | qt-creator/qt-creator | Status: MERGED | +2 | +1 |