Editors: Fix crash after triggering dropdown menu after closing editor

The context menu kept a handle on the editor and document, and these
could be deleted behind its back. Use QPointers to actually check.

Fixes: QTCREATORBUG-31232
Change-Id: I613abbe6dc0fbac60c2e527f715a7b8c2f083893
Reviewed-by: Christian Stenger <christian.stenger@qt.io>